modified:   hw-04.md 	modified:   src/cloud-init.yaml 	modified:   src/main.tf 	modified:   src/variables.tf 	image.png 	src/terraform.tfvars

--- a/hw-04.md
+++ b/hw-04.md
@@ -28,6 +28,142 @@
 4. Предоставьте скриншот подключения к консоли и вывод команды ```sudo nginx -t```, скриншот консоли ВМ yandex cloud с их метками. Откройте terraform console и предоставьте скриншот содержимого модуля. Пример: > module.marketing_vm
 ------
 В случае использования MacOS вы получите ошибку "Incompatible provider version" . В этом случае скачайте remote модуль локально и поправьте в нем версию template провайдера на более старую.
+
+### Решение Задание 1
+
+![alt text](image.png)
+
+```bash
+root@killakazzak:~/ter-homeworks-04-hw/src# terraform console
+> module.marketing-vm
+{
+  "external_ip_address" = [
+    "89.169.147.161",
+    "51.250.93.99",
+  ]
+  "fqdn" = [
+    "marketing-netology-develop-platform-marketing-0.ru-central1.internal",
+    "marketing-netology-develop-platform-marketing-1.ru-central1.internal",
+  ]
+  "internal_ip_address" = [
+    "10.0.1.27",
+    "10.0.1.28",
+  ]
+  "labels" = [
+    tomap({
+      "owner" = "i.ivanov"
+      "project" = "marketing"
+    }),
+    tomap({
+      "owner" = "i.ivanov"
+      "project" = "marketing"
+    }),
+  ]
+  "network_interface" = [
+    tolist([
+      {
+        "dns_record" = tolist([])
+        "index" = 0
+        "ip_address" = "10.0.1.27"
+        "ipv4" = true
+        "ipv6" = false
+        "ipv6_address" = ""
+        "ipv6_dns_record" = tolist([])
+        "mac_address" = "d0:0d:19:62:ba:8f"
+        "nat" = true
+        "nat_dns_record" = tolist([])
+        "nat_ip_address" = "89.169.147.161"
+        "nat_ip_version" = "IPV4"
+        "security_group_ids" = toset([])
+        "subnet_id" = "e9b2esp6jf37j95tb58o"
+      },
+    ]),
+    tolist([
+      {
+        "dns_record" = tolist([])
+        "index" = 0
+        "ip_address" = "10.0.1.28"
+        "ipv4" = true
+        "ipv6" = false
+        "ipv6_address" = ""
+        "ipv6_dns_record" = tolist([])
+        "mac_address" = "d0:0d:90:2e:99:7d"
+        "nat" = true
+        "nat_dns_record" = tolist([])
+        "nat_ip_address" = "51.250.93.99"
+        "nat_ip_version" = "IPV4"
+        "security_group_ids" = toset([])
+        "subnet_id" = "e9b2esp6jf37j95tb58o"
+      },
+    ]),
+  ]
+}
+> module.analytics-vm
+{
+  "external_ip_address" = [
+    "51.250.98.111",
+    "51.250.102.215",
+  ]
+  "fqdn" = [
+    "analytics-netology-develop-platform-analytics-0.ru-central1.internal",
+    "analytics-netology-develop-platform-analytics-1.ru-central1.internal",
+  ]
+  "internal_ip_address" = [
+    "10.0.2.27",
+    "10.0.2.17",
+  ]
+  "labels" = [
+    tomap({
+      "owner" = "i.ivanov"
+      "project" = "analytics"
+    }),
+    tomap({
+      "owner" = "i.ivanov"
+      "project" = "analytics"
+    }),
+  ]
+  "network_interface" = [
+    tolist([
+      {
+        "dns_record" = tolist([])
+        "index" = 0
+        "ip_address" = "10.0.2.27"
+        "ipv4" = true
+        "ipv6" = false
+        "ipv6_address" = ""
+        "ipv6_dns_record" = tolist([])
+        "mac_address" = "d0:0d:b2:d2:3b:53"
+        "nat" = true
+        "nat_dns_record" = tolist([])
+        "nat_ip_address" = "51.250.98.111"
+        "nat_ip_version" = "IPV4"
+        "security_group_ids" = toset([])
+        "subnet_id" = "e2lo7nb8s3tsa4a9d2mh"
+      },
+    ]),
+    tolist([
+      {
+        "dns_record" = tolist([])
+        "index" = 0
+        "ip_address" = "10.0.2.17"
+        "ipv4" = true
+        "ipv6" = false
+        "ipv6_address" = ""
+        "ipv6_dns_record" = tolist([])
+        "mac_address" = "d0:0d:34:d9:03:23"
+        "nat" = true
+        "nat_dns_record" = tolist([])
+        "nat_ip_address" = "51.250.102.215"
+        "nat_ip_version" = "IPV4"
+        "security_group_ids" = toset([])
+        "subnet_id" = "e2lo7nb8s3tsa4a9d2mh"
+      },
+    ]),
+  ]
+}
+>  
+```
+
 ------
 
 ### Задание 2
