modified:   hw-04.md

--- a/hw-04.md
+++ b/hw-04.md
@@ -185,6 +185,8 @@ module "vpc_dev" {
 }
 ```
 
+### Решение Задание 2
+
 ### Задание 3
 1. Выведите список ресурсов в стейте.
 2. Полностью удалите из стейта модуль vpc.
