--- a/hw-04.md
+++ b/hw-04.md
@@ -187,6 +187,12 @@ module "vpc_dev" {
 
 ### Решение Задание 2
 
+```bash
+snap install terraform-docs
+terraform-docs markdown . > README.md
+```
+
+
 ### Задание 3
 1. Выведите список ресурсов в стейте.
 2. Полностью удалите из стейта модуль vpc.
