--- a/hw-04.md
+++ b/hw-04.md
@@ -191,6 +191,7 @@ module "vpc_dev" {
 snap install terraform-docs
 terraform-docs markdown . > README.md
 ```
+![image](https://github.com/user-attachments/assets/41449ac2-5a2a-4ab5-9a48-069c284f13b0)
 
 
 ### Задание 3
