--- a/hw-04.md
+++ b/hw-04.md
@@ -193,6 +193,19 @@ terraform-docs markdown . > README.md
 ```
 ![image](https://github.com/user-attachments/assets/41449ac2-5a2a-4ab5-9a48-069c284f13b0)
 
+Застрял на этом задании, пока в дочерний модель не добавил providers.tf (возможно как то без него обойтить в дочернем модуле ?)
+
+```hcl
+terraform {
+  required_providers {
+    yandex = {
+      source = "yandex-cloud/yandex"
+    }
+  }
+  required_version = "~>1.8.4"
+}
+```
+
 
 ### Задание 3
 1. Выведите список ресурсов в стейте.
