modified:   hw-04.md

--- a/hw-04.md
+++ b/hw-04.md
@@ -214,6 +214,49 @@ terraform {
 4. Импортируйте всё обратно. Проверьте terraform plan. Значимых(!!) изменений быть не должно.
 Приложите список выполненных команд и скриншоты процессы.
 
+
+### Решение Задание 3
+
+```bash
+terraform state list
+```
+
+```text
+root@killakazzak:~/ter-homeworks-04-hw/src# terraform state list
+data.template_file.cloudinit
+yandex_vpc_network.develop
+yandex_vpc_subnet.develop_a
+yandex_vpc_subnet.develop_b
+module.analytics-vm.data.yandex_compute_image.my_image
+module.analytics-vm.yandex_compute_instance.vm[0]
+module.analytics-vm.yandex_compute_instance.vm[1]
+module.marketing-vm.data.yandex_compute_image.my_image
+module.marketing-vm.yandex_compute_instance.vm[0]
+module.marketing-vm.yandex_compute_instance.vm[1]
+module.vpc_dev.yandex_vpc_network.network
+module.vpc_dev.yandex_vpc_subnet.subnet
+```
+
+
+```bash
+terraform state rm module.vpc_dev.yandex_vpc_network.network
+terraform state rm module.vpc_dev.yandex_vpc_subnet.subnet
+terraform state rm module.analytics-vm.data.yandex_compute_image.my_image
+terraform state rm module.analytics-vm.yandex_compute_instance.vm[0]
+terraform state rm module.analytics-vm.yandex_compute_instance.vm[1]
+terraform state rm module.marketing-vm.data.yandex_compute_image.my_image
+terraform state rm module.marketing-vm.yandex_compute_instance.vm[0]
+terraform state rm module.marketing-vm.yandex_compute_instance.vm[1]
+```
+
+```text
+root@killakazzak:~/ter-homeworks-04-hw/src# terraform state list
+data.template_file.cloudinit
+yandex_vpc_network.develop
+yandex_vpc_subnet.develop_a
+yandex_vpc_subnet.develop_b
+```
+
 ## Дополнительные задания (со звёздочкой*)
 
 **Настоятельно рекомендуем выполнять все задания со звёздочкой.**   Они помогут глубже разобраться в материале.   
