modified:   hw-04.md 	new file:   image-2.png 	new file:   image-3.png

--- a/hw-04.md
+++ b/hw-04.md
@@ -257,6 +257,23 @@ yandex_vpc_subnet.develop_a
 yandex_vpc_subnet.develop_b
 ```
 
+```bash
+yc vpc network list
+terraform import module.vpc_dev.yandex_vpc_network.network enpvqlrjglqioinlosia
+```
+![alt text](image-2.png)
+
+```bash
+yc vpc subnet list
+terraform import module.vpc_dev.yandex_vpc_subnet.subnet e9bt9jdd59b3hjqq3gqu
+terraform import module.vpc_dev.yandex_vpc_subnet.subnet e2l98deth8d5kbbk4c2a
+```
+
+![alt text](image-3.png)
+
+
+
+
 ## Дополнительные задания (со звёздочкой*)
 
 **Настоятельно рекомендуем выполнять все задания со звёздочкой.**   Они помогут глубже разобраться в материале.   
