modified:   hw-04.md 	new file:   image-4.png

--- a/hw-04.md
+++ b/hw-04.md
@@ -271,6 +271,15 @@ terraform import module.vpc_dev.yandex_vpc_subnet.subnet e2l98deth8d5kbbk4c2a
 
 ![alt text](image-3.png)
 
+```bash
+yc compute instance list
+terraform import module.analytics-vm.yandex_compute_instance.vm[0] epd79ttc1ura2kd9n8f5
+terraform import module.analytics-vm.yandex_compute_instance.vm[1] epdh39dcb22o6s76mjrn
+terraform import module.marketing-vm.yandex_compute_instance.vm[0] fhmqaa0mmdbhli27h041
+terraform import module.marketing-vm.yandex_compute_instance.vm[1] fhmstb3d2gom0j3m3bui
+```
+![alt text](image-4.png)
+
 
 
 
