modified:   hw-04.md 	new file:   image-5.png 	new file:   image-6.png 	new file:   image-7.png

--- a/hw-04.md
+++ b/hw-04.md
@@ -280,7 +280,17 @@ terraform import module.marketing-vm.yandex_compute_instance.vm[1] fhmstb3d2gom0
 ```
 ![alt text](image-4.png)
 
+```bash
+terraform plan
+```
+Изменения
+![alt text](image-6.png)
 
+![alt text](image-7.png)
+
+![alt text](image-5.png)
+
+Мне кажется так лучше не делать. Я про модификацию стейта. Как говориться обратно фарш не провернёшь...
 
 
 ## Дополнительные задания (со звёздочкой*)
